--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="./src/app.js" type="module"></script>
-    <link rel="stylesheet" href="./css/style.css">
-    <title>My Movies</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./src/app.js" type="module"></script>
+  <link rel="stylesheet" href="./css/style.css">
+  <title>My Movies</title>
 </head>
+
 <body>
-    <h1>My Movies 1</h1>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+  </nav>
+
+
+  <div class="site-wrapper">
+    <main>
+
+    </main>
+  </div>
+
+
+
 </body>
+
 </html>
