--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="./src/app.js" type="module"></script>
   <link rel="stylesheet" href="./css/style.css">
-  <title>My Movies</title>
+  <title>Hollywood Storage</title>
 </head>
 
 <body>
