fixed editing object, and added notifications

--- a/index.html
+++ b/index.html
@@ -20,12 +20,11 @@
 
 
   <div class="site-wrapper">
+    <div class="notifications">
+    </div>
     <main>
 
     </main>
-  </div>
-
-
 
 </body>
 
