--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // MIT License
     // https://github.com/rafgraph/spa-github-pages
@@ -29,7 +29,7 @@
         );
       }
     }(window.location))
-  </script>
+  </script> -->
   <script src="./src/app.js" type="module"></script>
   <link rel="stylesheet" href="./css/style.css">
   <title>Hollywood Storage</title>
