--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="text/javascript" src="https://npmcdn.com/parse/dist/parse.min.js"></script>
   <script src="/github.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="/css/loading.css">
   <link rel="stylesheet" href="/css/style.css">
   <script src="/src/app.js" type="module"></script>
   <title>Hollywood Storage</title>
